Dropdown: Fix for overflow in dropdown

--- a/packages/office-ui-fabric-react/src/components/Dropdown/Dropdown.scss
+++ b/packages/office-ui-fabric-react/src/components/Dropdown/Dropdown.scss
@@ -255,3 +255,13 @@ $DropDown-item-height: 36px;
   height: 1px;
   background-color: $dividerColor;
 }
+
+.span{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+   min-width: 100px;
+  max-width: 100%;
+  word-break: break-all;
+  margin: 1px;
+}
